libcamera-sys/bindings/bindings.rs

/* automatically generated by rust-bindgen 0.70.1 */

pub const LIBCAMERA_VERSION_MAJOR: u32 = 0;
pub const LIBCAMERA_VERSION_MINOR: u32 = 7;
pub const LIBCAMERA_VERSION_PATCH: u32 = 0;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct libcamera_control_value {
    _unused: [u8; 0],
}
pub type libcamera_control_value_t = libcamera_control_value;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct libcamera_control_list {
    _unused: [u8; 0],
}
pub type libcamera_control_list_t = libcamera_control_list;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct libcamera_control_list_iter {
    _unused: [u8; 0],
}
pub type libcamera_control_list_iter_t = libcamera_control_list_iter;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct libcamera_control_info_map_iter {
    _unused: [u8; 0],
}
pub type libcamera_control_info_map_iter_t = libcamera_control_info_map_iter;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct libcamera_control_info_map {
    _unused: [u8; 0],
}
pub type libcamera_control_info_map_t = libcamera_control_info_map;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct libcamera_control_id {
    _unused: [u8; 0],
}
pub type libcamera_control_id_t = libcamera_control_id;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct libcamera_control_info {
    _unused: [u8; 0],
}
pub type libcamera_control_info_t = libcamera_control_info;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct libcamera_control_id_map {
    _unused: [u8; 0],
}
pub type libcamera_control_id_map_t = libcamera_control_id_map;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct libcamera_control_id_enumerators_iter {
    _unused: [u8; 0],
}
pub type libcamera_control_id_enumerators_iter_t = libcamera_control_id_enumerators_iter;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct libcamera_control_id_map_iter {
    _unused: [u8; 0],
}
pub type libcamera_control_id_map_iter_t = libcamera_control_id_map_iter;
pub mod libcamera_control_id_enum {
    pub type Type = ::std::os::raw::c_uint;
    pub const libcamera_control_id_DUMMY: Type = 0;
}
pub mod libcamera_property_id {
    pub type Type = ::std::os::raw::c_uint;
    pub const libcamera_property_id_DUMMY: Type = 0;
}
pub mod libcamera_control_type {
    pub type Type = ::std::os::raw::c_uint;
    pub const LIBCAMERA_CONTROL_TYPE_NONE: Type = 0;
    pub const LIBCAMERA_CONTROL_TYPE_BOOL: Type = 1;
    pub const LIBCAMERA_CONTROL_TYPE_BYTE: Type = 2;
    pub const LIBCAMERA_CONTROL_TYPE_UINT16: Type = 3;
    pub const LIBCAMERA_CONTROL_TYPE_UINT32: Type = 4;
    pub const LIBCAMERA_CONTROL_TYPE_INT32: Type = 5;
    pub const LIBCAMERA_CONTROL_TYPE_INT64: Type = 6;
    pub const LIBCAMERA_CONTROL_TYPE_FLOAT: Type = 7;
    pub const LIBCAMERA_CONTROL_TYPE_STRING: Type = 8;
    pub const LIBCAMERA_CONTROL_TYPE_RECTANGLE: Type = 9;
    pub const LIBCAMERA_CONTROL_TYPE_SIZE: Type = 10;
    pub const LIBCAMERA_CONTROL_TYPE_POINT: Type = 11;
}
pub mod libcamera_control_direction {
    pub type Type = ::std::os::raw::c_uint;
    pub const LIBCAMERA_CONTROL_DIRECTION_IN: Type = 1;
    pub const LIBCAMERA_CONTROL_DIRECTION_OUT: Type = 2;
}
pub mod libcamera_control_merge_policy {
    pub type Type = ::std::os::raw::c_uint;
    pub const LIBCAMERA_CONTROL_MERGE_KEEP_EXISTING: Type = 0;
    pub const LIBCAMERA_CONTROL_MERGE_OVERWRITE_EXISTING: Type = 1;
}
extern "C" {
    pub fn libcamera_control_from_id(id: libcamera_control_id_enum::Type) -> *const libcamera_control_id_t;
}
extern "C" {
    pub fn libcamera_control_name_from_id(id: libcamera_control_id_enum::Type) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn libcamera_control_type_from_id(id: libcamera_control_id_enum::Type) -> libcamera_control_type::Type;
}
extern "C" {
    pub fn libcamera_control_id(control: *mut libcamera_control_id_t) -> libcamera_control_id_enum::Type;
}
extern "C" {
    pub fn libcamera_control_name(control: *mut libcamera_control_id_t) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn libcamera_control_id_type(control: *mut libcamera_control_id_t) -> libcamera_control_type::Type;
}
extern "C" {
    pub fn libcamera_control_id_vendor(control: *mut libcamera_control_id_t) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn libcamera_control_id_direction(control: *mut libcamera_control_id_t) -> libcamera_control_direction::Type;
}
extern "C" {
    pub fn libcamera_control_id_is_input(control: *mut libcamera_control_id_t) -> bool;
}
extern "C" {
    pub fn libcamera_control_id_is_output(control: *mut libcamera_control_id_t) -> bool;
}
extern "C" {
    pub fn libcamera_control_id_is_array(control: *mut libcamera_control_id_t) -> bool;
}
extern "C" {
    pub fn libcamera_control_id_size(control: *mut libcamera_control_id_t) -> usize;
}
extern "C" {
    pub fn libcamera_control_id_enumerators_iter_create(
        control: *mut libcamera_control_id_t,
    ) -> *mut libcamera_control_id_enumerators_iter_t;
}
extern "C" {
    pub fn libcamera_control_id_enumerators_iter_has_next(iter: *const libcamera_control_id_enumerators_iter_t)
        -> bool;
}
extern "C" {
    pub fn libcamera_control_id_enumerators_iter_key(iter: *const libcamera_control_id_enumerators_iter_t) -> i32;
}
extern "C" {
    pub fn libcamera_control_id_enumerators_iter_value(
        iter: *const libcamera_control_id_enumerators_iter_t,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn libcamera_control_id_enumerators_iter_next(iter: *mut libcamera_control_id_enumerators_iter_t);
}
extern "C" {
    pub fn libcamera_control_id_enumerators_iter_destroy(iter: *mut libcamera_control_id_enumerators_iter_t);
}
extern "C" {
    pub fn libcamera_control_id_map_iter_create(
        map: *const libcamera_control_id_map_t,
    ) -> *mut libcamera_control_id_map_iter_t;
}
extern "C" {
    pub fn libcamera_control_id_map_iter_has_next(iter: *const libcamera_control_id_map_iter_t) -> bool;
}
extern "C" {
    pub fn libcamera_control_id_map_iter_key(iter: *const libcamera_control_id_map_iter_t) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn libcamera_control_id_map_iter_value(
        iter: *const libcamera_control_id_map_iter_t,
    ) -> *const libcamera_control_id_t;
}
extern "C" {
    pub fn libcamera_control_id_map_iter_next(iter: *mut libcamera_control_id_map_iter_t);
}
extern "C" {
    pub fn libcamera_control_id_map_iter_destroy(iter: *mut libcamera_control_id_map_iter_t);
}
extern "C" {
    pub fn libcamera_property_name_from_id(id: libcamera_property_id::Type) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn libcamera_property_type_from_id(id: libcamera_property_id::Type) -> libcamera_control_type::Type;
}
extern "C" {
    pub fn libcamera_control_list_create() -> *mut libcamera_control_list_t;
}
extern "C" {
    pub fn libcamera_control_list_create_with_idmap(
        idmap: *const libcamera_control_id_map_t,
    ) -> *mut libcamera_control_list_t;
}
extern "C" {
    pub fn libcamera_control_list_create_with_info_map(
        info_map: *const libcamera_control_info_map_t,
    ) -> *mut libcamera_control_list_t;
}
extern "C" {
    pub fn libcamera_control_list_destroy(list: *mut libcamera_control_list_t);
}
extern "C" {
    pub fn libcamera_control_list_get(
        list: *mut libcamera_control_list_t,
        id: libcamera_property_id::Type,
    ) -> *const libcamera_control_value_t;
}
extern "C" {
    pub fn libcamera_control_list_set(
        list: *mut libcamera_control_list_t,
        id: libcamera_property_id::Type,
        val: *const libcamera_control_value_t,
    );
}
extern "C" {
    pub fn libcamera_control_list_contains(list: *const libcamera_control_list_t, id: ::std::os::raw::c_uint) -> bool;
}
extern "C" {
    pub fn libcamera_control_list_clear(list: *mut libcamera_control_list_t);
}
extern "C" {
    pub fn libcamera_control_list_size(list: *const libcamera_control_list_t) -> usize;
}
extern "C" {
    pub fn libcamera_control_list_is_empty(list: *const libcamera_control_list_t) -> bool;
}
extern "C" {
    pub fn libcamera_control_list_merge(
        list: *mut libcamera_control_list_t,
        other: *const libcamera_control_list_t,
        policy: libcamera_control_merge_policy::Type,
    );
}
extern "C" {
    pub fn libcamera_control_list_info_map(
        list: *const libcamera_control_list_t,
    ) -> *const libcamera_control_info_map_t;
}
extern "C" {
    pub fn libcamera_control_list_id_map(list: *const libcamera_control_list_t) -> *const libcamera_control_id_map_t;
}
extern "C" {
    pub fn libcamera_control_list_iter(list: *mut libcamera_control_list_t) -> *mut libcamera_control_list_iter_t;
}
extern "C" {
    pub fn libcamera_control_list_iter_destroy(iter: *mut libcamera_control_list_iter_t);
}
extern "C" {
    pub fn libcamera_control_list_iter_end(iter: *const libcamera_control_list_iter_t) -> bool;
}
extern "C" {
    pub fn libcamera_control_list_iter_next(iter: *mut libcamera_control_list_iter_t);
}
extern "C" {
    pub fn libcamera_control_list_iter_id(iter: *mut libcamera_control_list_iter_t) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn libcamera_control_list_iter_value(
        iter: *mut libcamera_control_list_iter_t,
    ) -> *const libcamera_control_value_t;
}
extern "C" {
    pub fn libcamera_control_value_create() -> *mut libcamera_control_value_t;
}
extern "C" {
    pub fn libcamera_control_value_destroy(val: *mut libcamera_control_value_t);
}
extern "C" {
    pub fn libcamera_control_value_type(val: *const libcamera_control_value_t) -> libcamera_control_type::Type;
}
extern "C" {
    pub fn libcamera_control_value_is_none(val: *const libcamera_control_value_t) -> bool;
}
extern "C" {
    pub fn libcamera_control_value_is_array(val: *const libcamera_control_value_t) -> bool;
}
extern "C" {
    pub fn libcamera_control_value_num_elements(val: *const libcamera_control_value_t) -> usize;
}
extern "C" {
    pub fn libcamera_control_value_get(val: *const libcamera_control_value_t) -> *const ::std::os::raw::c_void;
}
extern "C" {
    pub fn libcamera_control_value_set(
        val: *mut libcamera_control_value_t,
        type_: libcamera_control_type::Type,
        data: *const ::std::os::raw::c_void,
        is_array: bool,
        num_elements: usize,
    );
}
extern "C" {
    pub fn libcamera_control_value_size() -> usize;
}
extern "C" {
    pub fn libcamera_control_info_max(val: *mut libcamera_control_info_t) -> *const libcamera_control_value_t;
}
extern "C" {
    pub fn libcamera_control_info_min(val: *mut libcamera_control_info_t) -> *const libcamera_control_value_t;
}
extern "C" {
    pub fn libcamera_control_info_def(val: *mut libcamera_control_info_t) -> *const libcamera_control_value_t;
}
extern "C" {
    pub fn libcamera_control_info_values(
        info: *const libcamera_control_info_t,
        size: *mut usize,
    ) -> *const libcamera_control_value_t;
}
extern "C" {
    pub fn libcamera_control_id_map_add(
        idmap: *mut libcamera_control_id_map_t,
        key: ::std::os::raw::c_uint,
        control_id: *const libcamera_control_id_t,
    ) -> bool;
}
extern "C" {
    pub fn libcamera_control_id_map_get(
        idmap: *mut libcamera_control_id_map_t,
        key: ::std::os::raw::c_uint,
    ) -> *const libcamera_control_id_t;
}
extern "C" {
    pub fn libcamera_control_info_map_at(
        map: *mut libcamera_control_info_map_t,
        key: ::std::os::raw::c_uint,
    ) -> *const libcamera_control_info_t;
}
extern "C" {
    pub fn libcamera_control_info_map_size(map: *const libcamera_control_info_map_t) -> usize;
}
extern "C" {
    pub fn libcamera_control_info_map_count(
        map: *const libcamera_control_info_map_t,
        key: ::std::os::raw::c_uint,
    ) -> usize;
}
extern "C" {
    pub fn libcamera_control_info_map_find(
        map: *const libcamera_control_info_map_t,
        key: ::std::os::raw::c_uint,
    ) -> *const libcamera_control_info_t;
}
